...
                    self.favorites.favs = self.favorites.favs.reversed() //TODO change this to a method on the favorites object
                    
                    let titles  = self.favorites.favs.map { $0.name } as [String]
                    
                    if $.contains(titles, value: self.content.title){
                        
                        self.addFavoriteButton.setTitle("Remove From Favorites", for: .normal)
                    }
                    else {
                        self.addFavoriteButton.setTitle("ADD TO FAVORITES", for: .normal)
                    }
            }
        }
    }
    
    
...
